# spichki

./: .gitignore  README.md  pyproject.toml  source.py
src/spichki/: models.py  session.py
src/storage/: storages.py
