[tool.poetry]
name = "spichki"
version = "0.1.0"
description = "The classic game of matches"
authors = ["SciBourne <bourne-sci-hack@yandex.ru>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
flake8 = "^6.0.0"
jedi = "^0.18.2"
yapf = "^0.32.0"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
